fix scrollbar flashing on windows

--- a/pages/app.css
+++ b/pages/app.css
@@ -18,4 +18,5 @@ body {
   background-color: var(--background-primary);
   font-family: "Lato", sans-serif;
   font-size: 16px;
+  overflow: hidden;
 }
